package eapli.ecourse.exammanagement.domain;

import javax.persistence.Column;
import javax.persistence.Entity;
import javax.persistence.GeneratedValue;
import javax.persistence.GenerationType;
import javax.persistence.Id;
import javax.persistence.Version;

import eapli.ecourse.coursemanagement.domain.Course;
import eapli.framework.domain.model.AggregateRoot;

/**
 * Abstract class that describes an exam.
 */
@Entity
public abstract class Exam implements AggregateRoot<Long> {
  private static final long serialVersionUID = 1L;

  @Version
  private Long version;

  @Id
  @GeneratedValue(strategy = GenerationType.IDENTITY)
  private long id;

  @Column(nullable = false)
  private Course course;

  // @Column(nullable = false)
  // private Teacher teacher;

  @Column(nullable = false)
  private ExamDescription description;

  @Column(nullable = false)
  private ExamState state;
}
