@startuml DM
'https://plantuml.com/class-diagram

skinparam classAttributeIconSize 0
hide empty attributes
hide empty methods
skinparam classBackgroundColor beige
skinparam ArrowColor #222222

package "<<aggregate>> User" {
    entity User
}

entity User <<entity>> <<root>> {
    - isActive
}

package "<<aggregate>> Teacher" {
    entity Teacher
}


entity Teacher <<entity>> <<root>> {
  -id
}

package "<<aggregate>> Student" {
    entity Student
}

entity Student <<entity>> <<root>> {
  -id
}

package "<<aggregate>> Manager" {
    entity Manager
}

entity Manager <<entity>> <<root>> {
  -id
}

package "<<aggregate>> Course" {
    entity Course
}

entity Course <<entity>> <<root>> {
    - code
}

package "<<aggregate>> Board" {
    entity Board
}

entity Board <<entity>> <<root>> {
}

package "<<aggregate>> Enrolment" {
    entity Enrolment
}

entity Enrolment <<entity>> <<root>> {
}

package "<<aggregate>> Exam" {
    entity Exam
}

entity Exam <<entity>> <<root>> {
}

package "<<aggregate>> PostIt" {
    entity PostIt
}

entity PostIt <<entity>> <<root>> {
    -id
}

package "<<aggregate>> Event" {
    entity Event
}

entity Event <<entity>> <<root>> {
    -id
}

package "<<aggregate>> Meeting" {
    entity Meeting
}

entity Meeting <<entity>> <<root>> {
    -id
}

package "<<aggregate>> Class" {
    entity Class
}

entity Class <<entity>> <<root>> {
    -id
}

package "<<aggregate>> Answer" {
    entity Answer
}

entity Answer <<entity>> <<root>> {
    -id
}

Teacher -|> User 
Student --|> User 
Manager --|> User

Course ---> "1..*" Teacher : has teachers
Course --> "1" Teacher : has a responsible

Enrolment --> "1" Student : has
Enrolment --> "1" Course : is for

Board --> "1" User : has an owner
PostIt --> "1" Board: belongs to

Exam --> "1..*" Student : is taken by
Exam -> "1" Course : is for
Answer --> "1" Exam : is for

Class --|> "1" Event
Meeting -|> "1" Event

Student --> "0..*" Event: participate
Student --> "0..*" Answer : has

Meeting --> "1" User: has an owner
Teacher ---> "0..*" Class: schedules

@enduml
